tests/NormalTests/paczka1/small_fuzzy/14877586.err
Error in line 2: h6m3hsG15S S101 32,1
Error in line 11: S281 S281 3,4
Error in line 9: 1CTkmHa S456 189,4
